--- a/components/multiple-choice-question.html
+++ b/components/multiple-choice-question.html
@@ -415,20 +415,7 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.11.1" data-path="function-plot.html">
-            
-                <a href="function-plot.html">
-            
-                    
-                    Function Plot
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.11.2" data-path="density-plot.html">
+        <li class="chapter " data-level="1.4.11.1" data-path="density-plot.html">
             
                 <a href="density-plot.html">
             
@@ -441,7 +428,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.3" data-path="r-plot.html">
+        <li class="chapter " data-level="1.4.11.2" data-path="r-plot.html">
             
                 <a href="r-plot.html">
             
@@ -537,7 +524,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.18" data-path="timer.html">
+        <li class="chapter " data-level="1.4.18" data-path="text.html">
+            
+                <a href="text.html">
+            
+                    
+                    Text
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.19" data-path="timer.html">
             
                 <a href="timer.html">
             
@@ -550,7 +550,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.19" data-path="latex.html">
+        <li class="chapter " data-level="1.4.20" data-path="latex.html">
             
                 <a href="latex.html">
             
@@ -563,7 +563,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.20" data-path="video-player.html">
+        <li class="chapter " data-level="1.4.21" data-path="video-player.html">
             
                 <a href="video-player.html">
             
@@ -705,7 +705,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Multiple Choice Question","level":"1.4.10","depth":2,"next":{"title":"Plots","level":"1.4.11","depth":2,"path":"components/plots.md","ref":"components/plots.md","articles":[{"title":"Function Plot","level":"1.4.11.1","depth":3,"path":"components/function-plot.md","ref":"components/function-plot.md","articles":[]},{"title":"Density Plot","level":"1.4.11.2","depth":3,"path":"components/density-plot.md","ref":"components/density-plot.md","articles":[]},{"title":"R Plot","level":"1.4.11.3","depth":3,"path":"components/r-plot.md","ref":"components/r-plot.md","articles":[]}]},"previous":{"title":"Match List Question","level":"1.4.9","depth":2,"path":"components/match-list-question.md","ref":"components/match-list-question.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/multiple-choice-question.md","mtime":"2016-11-17T20:42:23.603Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-12-27T23:33:31.410Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Multiple Choice Question","level":"1.4.10","depth":2,"next":{"title":"Plots","level":"1.4.11","depth":2,"path":"components/plots.md","ref":"components/plots.md","articles":[{"title":"Density Plot","level":"1.4.11.1","depth":3,"path":"components/density-plot.md","ref":"components/density-plot.md","articles":[]},{"title":"R Plot","level":"1.4.11.2","depth":3,"path":"components/r-plot.md","ref":"components/r-plot.md","articles":[]}]},"previous":{"title":"Match List Question","level":"1.4.9","depth":2,"path":"components/match-list-question.md","ref":"components/match-list-question.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/multiple-choice-question.md","mtime":"2016-11-17T20:42:23.603Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-12-28T20:15:07.684Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
