--- a/components/r-table.html
+++ b/components/r-table.html
@@ -415,20 +415,7 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.11.1" data-path="function-plot.html">
-            
-                <a href="function-plot.html">
-            
-                    
-                    Function Plot
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.11.2" data-path="density-plot.html">
+        <li class="chapter " data-level="1.4.11.1" data-path="density-plot.html">
             
                 <a href="density-plot.html">
             
@@ -441,7 +428,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.3" data-path="r-plot.html">
+        <li class="chapter " data-level="1.4.11.2" data-path="r-plot.html">
             
                 <a href="r-plot.html">
             
@@ -537,7 +524,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.18" data-path="timer.html">
+        <li class="chapter " data-level="1.4.18" data-path="text.html">
+            
+                <a href="text.html">
+            
+                    
+                    Text
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.19" data-path="timer.html">
             
                 <a href="timer.html">
             
@@ -550,7 +550,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.19" data-path="latex.html">
+        <li class="chapter " data-level="1.4.20" data-path="latex.html">
             
                 <a href="latex.html">
             
@@ -563,7 +563,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.20" data-path="video-player.html">
+        <li class="chapter " data-level="1.4.21" data-path="video-player.html">
             
                 <a href="video-player.html">
             
@@ -640,12 +640,22 @@
                                 <section class="normal markdown-section">
                                 
                                 <h1 id="r-table">R Table</h1>
-<p>Component for rendering a R data frame </p>
+<p>Component for rendering a R data frame or matrix in a tabular display. This component uses the <a href="http://facebook.github.io/fixed-data-table" target="_blank">fixed-data-package</a> library under the hood.</p>
 <h4 id="example">Example:</h4>
-<pre class="language-"><code class="lang-js">
-
+<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>RTable
+    code<span class="token operator">=</span><span class="token punctuation">{</span><span class="token template-string"><span class="token string">`data &lt;- matrix( runif(16), nrow=4, ncol=4)
+data`</span></span><span class="token punctuation">}</span>
+<span class="token operator">/</span><span class="token operator">&gt;</span>
 </code></pre>
 <h4 id="options">Options:</h4>
+<ul>
+<li><strong>code</strong>: R code <code>string</code> from which to form the table. The last line must refer to a <code>data.frame</code> or <code>matrix</code>. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>columnNames</strong>: <code>array</code> of <code>strings</code> specifying the column names of the table. Setting this attribute overrides any existing column names attached to the R object, which will be used otherwise. Default: <code>null</code>.</li>
+<li><strong>columnWidth</strong>: <code>number</code> or <code>array</code> of values specifying the exact column width(s) of the table (in px). Default: <code>null</code>.</li>
+<li><strong>maxHeight</strong>:  <code>number</code> giving the maximum height of the created table (in px). A vertical scrollbar appears in case not all rows fit. Default: <code>600</code>.</li>
+<li><strong>prependCode</strong>: <code>string</code> or an <code>Array</code> of R code to be prepended to the code stored in <code>code</code> when evaluating. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>width</strong>: <code>number</code> giving the width of the created plot (in percent). Default: <code>0.5</code>.</li>
+</ul>
 
                                 
                                 </section>
@@ -689,7 +699,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"R Table","level":"1.4.15","depth":2,"next":{"title":"Slider","level":"1.4.16","depth":2,"path":"components/slider.md","ref":"components/slider.md","articles":[]},"previous":{"title":"R Shell","level":"1.4.14","depth":2,"path":"components/r-shell.md","ref":"components/r-shell.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/r-table.md","mtime":"2016-11-17T20:42:39.162Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-12-27T23:33:31.410Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"R Table","level":"1.4.15","depth":2,"next":{"title":"Slider","level":"1.4.16","depth":2,"path":"components/slider.md","ref":"components/slider.md","articles":[]},"previous":{"title":"R Shell","level":"1.4.14","depth":2,"path":"components/r-shell.md","ref":"components/r-shell.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/r-table.md","mtime":"2016-12-28T19:11:12.479Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-12-28T20:15:07.684Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
