--- a/components/text-area.html
+++ b/components/text-area.html
@@ -415,20 +415,7 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.11.1" data-path="function-plot.html">
-            
-                <a href="function-plot.html">
-            
-                    
-                    Function Plot
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.11.2" data-path="density-plot.html">
+        <li class="chapter " data-level="1.4.11.1" data-path="density-plot.html">
             
                 <a href="density-plot.html">
             
@@ -441,7 +428,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.3" data-path="r-plot.html">
+        <li class="chapter " data-level="1.4.11.2" data-path="r-plot.html">
             
                 <a href="r-plot.html">
             
@@ -537,7 +524,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.18" data-path="timer.html">
+        <li class="chapter " data-level="1.4.18" data-path="text.html">
+            
+                <a href="text.html">
+            
+                    
+                    Text
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.19" data-path="timer.html">
             
                 <a href="timer.html">
             
@@ -550,7 +550,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.19" data-path="latex.html">
+        <li class="chapter " data-level="1.4.20" data-path="latex.html">
             
                 <a href="latex.html">
             
@@ -563,7 +563,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.20" data-path="video-player.html">
+        <li class="chapter " data-level="1.4.21" data-path="video-player.html">
             
                 <a href="video-player.html">
             
@@ -640,6 +640,34 @@
                                 <section class="normal markdown-section">
                                 
                                 <h1 id="text-area">Text Area</h1>
+<p>A text area component. Used ss a stand-alone component, changes should be handled via the <code>onChange</code> attribute. </p>
+<h4 id="example">Example:</h4>
+<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>TextArea
+    legend<span class="token operator">=</span><span class="token string">&quot;Your name&quot;</span>
+    defaultValue<span class="token operator">=</span><span class="token string">&quot;Enter text&quot;</span>
+<span class="token operator">/</span><span class="token operator">&gt;</span>
+</code></pre>
+<h4 id="options">Options:</h4>
+<ul>
+<li><strong>text</strong>: The option the text input is initialized with. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>legend</strong>: <code>string</code> to be displayed as the title of te component. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>onChange</strong>: Callback <code>function</code> invoked after each change of the text value. Default: <code>null</code>.
+A text input component. Usually, this will be used as part of an <a href="dashboard.html">ISLE dashboard</a>, but it can also be used standalone. In this case, you want to handle changes via the <code>onChange</code> attribute. </li>
+</ul>
+<h4 id="example">Example:</h4>
+<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>TextArea
+    legend<span class="token operator">=</span><span class="token string">&quot;Please enter a few sentences&quot;</span>
+    placeholder<span class="token operator">=</span><span class="token string">&quot;Enter text&quot;</span>
+<span class="token operator">/</span><span class="token operator">&gt;</span>
+</code></pre>
+<h4 id="options">Options:</h4>
+<ul>
+<li><strong>legend</strong>: <code>string</code> to be displayed as the title of te component. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>onChange</strong>: Callback <code>function</code> invoked after each change of the text value. Default: <code>null</code>.</li>
+<li><strong>placeholder</strong>: </li>
+<li><strong>resize</strong>:* <code>boolean</code> indicating whether the element should be resizable. Default: <code>false</code>.</li>
+<li><strong>rows</strong>:* <code>number</code> of rows. Default: <code>5</code>.</li>
+</ul>
 
                                 
                                 </section>
@@ -683,7 +711,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Text Area","level":"1.4.2.5","depth":3,"next":{"title":"Text Input","level":"1.4.2.6","depth":3,"path":"components/text-input.md","ref":"components/text-input.md","articles":[]},"previous":{"title":"Slider Input","level":"1.4.2.4","depth":3,"path":"components/slider-input.md","ref":"components/slider-input.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/text-area.md","mtime":"2016-11-11T08:30:48.419Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-12-27T23:33:31.410Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Text Area","level":"1.4.2.5","depth":3,"next":{"title":"Text Input","level":"1.4.2.6","depth":3,"path":"components/text-input.md","ref":"components/text-input.md","articles":[]},"previous":{"title":"Slider Input","level":"1.4.2.4","depth":3,"path":"components/slider-input.md","ref":"components/slider-input.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/text-area.md","mtime":"2016-12-28T20:05:14.002Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-12-28T20:15:07.684Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
