--- a/components/text.html
+++ b/components/text.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <title>Function Plot · ISLE Editor Documentation</title>
+        <title>Text · ISLE Editor Documentation</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="description" content="">
         <meta name="generator" content="GitBook 3.2.2">
@@ -57,10 +57,10 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="density-plot.html" />
+    <link rel="next" href="timer.html" />
     
     
-    <link rel="prev" href="plots.md" />
+    <link rel="prev" href="switch.html" />
     
 
     </head>
@@ -415,20 +415,7 @@
             <ul class="articles">
                 
     
-        <li class="chapter active" data-level="1.4.11.1" data-path="function-plot.html">
-            
-                <a href="function-plot.html">
-            
-                    
-                    Function Plot
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.11.2" data-path="density-plot.html">
+        <li class="chapter " data-level="1.4.11.1" data-path="density-plot.html">
             
                 <a href="density-plot.html">
             
@@ -441,7 +428,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.3" data-path="r-plot.html">
+        <li class="chapter " data-level="1.4.11.2" data-path="r-plot.html">
             
                 <a href="r-plot.html">
             
@@ -537,7 +524,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.18" data-path="timer.html">
+        <li class="chapter active" data-level="1.4.18" data-path="text.html">
+            
+                <a href="text.html">
+            
+                    
+                    Text
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.19" data-path="timer.html">
             
                 <a href="timer.html">
             
@@ -550,7 +550,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.19" data-path="latex.html">
+        <li class="chapter " data-level="1.4.20" data-path="latex.html">
             
                 <a href="latex.html">
             
@@ -563,7 +563,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.20" data-path="video-player.html">
+        <li class="chapter " data-level="1.4.21" data-path="video-player.html">
             
                 <a href="video-player.html">
             
@@ -624,7 +624,7 @@
     <!-- Title -->
     <h1>
         <i class="fa fa-circle-o-notch fa-spin"></i>
-        <a href=".." >Function Plot</a>
+        <a href=".." >Text</a>
     </h1>
 </div>
 
@@ -639,25 +639,11 @@
     
                                 <section class="normal markdown-section">
                                 
-                                <h1 id="function-plot">Function Plot</h1>
-<p>ISLE component to generate line-plots of functions and/or scatter-plots of individual observations.</p>
-<h4 id="example">Example:</h4>
-<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>FunctionPlot
-    data<span class="token operator">=</span><span class="token punctuation">{</span><span class="token punctuation">[</span>
-        <span class="token punctuation">{</span> fun<span class="token punctuation">:</span> Math<span class="token punctuation">.</span>sin <span class="token punctuation">}</span>
-    <span class="token punctuation">]</span><span class="token punctuation">}</span>
-    id<span class="token operator">=</span><span class="token string">&quot;myplot&quot;</span>
-<span class="token operator">/</span><span class="token operator">&gt;</span>
+                                <h1 id="text">Text</h1>
+<p>By default, only Markdown at the top-level will be processed. In case you wish to use Markdown syntax inside a component attribute or nested inside HTML tags, you have to wrap it inside this component. The component expects no other child elements besides text.</p>
+<h3 id="example">Example:</h3>
+<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>Text<span class="token operator">&gt;</span><span class="token operator">*</span>Markdown<span class="token operator">*</span> formatted text comes here<span class="token punctuation">.</span><span class="token punctuation">.</span><span class="token punctuation">.</span><span class="token operator">&lt;</span><span class="token operator">/</span>Text<span class="token operator">&gt;</span>
 </code></pre>
-<h4 id="options">Options:</h4>
-<ul>
-<li><strong>data</strong>: An array of <code>objects</code> with either a <code>fun</code> or <code>points</code> key. <code>fun</code> expects a <code>function</code> to be plotted, whereas <code>points</code> should be an array of arrays of length two holding the (x,y) pairs to be plotted. Required.</li>
-<li><strong>id</strong>: Unique <code>string</code> identifier for the plot to be created. Required.</li>
-<li><strong>width</strong>: <code>number</code> giving the width of the created plot (in px). Default: <code>250</code>.</li>
-<li><strong>height</strong>: <code>number</code> giving the height of the created plot (in px). Default: <code>250</code>.</li>
-<li><strong>title</strong>: <code>string</code> specifying the title of the plot. Default: <code>null</code>.</li>
-<li><strong>disableZoom</strong>: <code>boolean</code> indicating whether zooming should be disabled. Default: <code>true</code>.</li>
-</ul>
 
                                 
                                 </section>
@@ -685,12 +671,12 @@
 
             
                 
-                <a href="plots.md" class="navigation navigation-prev " aria-label="Previous page: Plots">
+                <a href="switch.html" class="navigation navigation-prev " aria-label="Previous page: Switch">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
                 
-                <a href="density-plot.html" class="navigation navigation-next " aria-label="Next page: Density Plot">
+                <a href="timer.html" class="navigation navigation-next " aria-label="Next page: Timer">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -701,7 +687,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Function Plot","level":"1.4.11.1","depth":3,"next":{"title":"Density Plot","level":"1.4.11.2","depth":3,"path":"components/density-plot.md","ref":"components/density-plot.md","articles":[]},"previous":{"title":"Plots","level":"1.4.11","depth":2,"path":"components/plots.md","ref":"components/plots.md","articles":[{"title":"Function Plot","level":"1.4.11.1","depth":3,"path":"components/function-plot.md","ref":"components/function-plot.md","articles":[]},{"title":"Density Plot","level":"1.4.11.2","depth":3,"path":"components/density-plot.md","ref":"components/density-plot.md","articles":[]},{"title":"R Plot","level":"1.4.11.3","depth":3,"path":"components/r-plot.md","ref":"components/r-plot.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/function-plot.md","mtime":"2016-11-21T01:56:53.241Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-12-27T23:33:31.410Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Text","level":"1.4.18","depth":2,"next":{"title":"Timer","level":"1.4.19","depth":2,"path":"components/timer.md","ref":"components/timer.md","articles":[]},"previous":{"title":"Switch","level":"1.4.17","depth":2,"path":"components/switch.md","ref":"components/switch.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/text.md","mtime":"2016-12-28T19:55:58.120Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-12-28T20:15:07.684Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
